# bevy-fusabi

./: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  test_example.sh  test_execute.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml  release.yml
assets/: hello.fsx
docs/: RELEASE.md  STRUCTURE.md
docs/versions/vNEXT/: README.md  compatibility.md  examples.md  getting-started.md  hot-reload.md  integration.md
examples/: execute_script.rs  load_script.rs
src/: asset.rs  lib.rs  loader.rs  runner.rs
