[package]
name = "bevy-fusabi"
version = "0.1.0"
edition = "2021"
description = "Bevy integration for the Fusabi scripting language"
license = "MIT OR Apache-2.0"

[dependencies]
# Core Bevy
bevy = { version = "0.15", default-features = false, features = ["bevy_asset"] }

# Fusabi Runtime & Compiler
fusabi-vm = { version = "0.12.0", features = ["serde"] }
fusabi-frontend = "0.12.0"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]

bevy = { version = "0.15", default-features = false, features = ["bevy_asset", "multi_threaded"] }
